# wechat_work_webhook

./: .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  README.md  configure.sh  linux_cmake_template_auxiliary.sh  package.json  tools-gcc4.var  tools-gcc9.2.var  tools.var  wechat_work_webhook_auxiliary.sh
.gitlab/issue_templates/: bug.md  feature.md
src/main/: linux_cmake_template_main.c  linux_cmake_template_main.h  wechat_work_webhook_main.c  wechat_work_webhook_main.h
tools/: auxiliary_completion.bash  build.sh  login_debug.sh  login_redebug.sh  login_upload.sh  project_configure.sh  project_op.sh  scp_passwd.sh  scp_passwd_user  ssh_login_gdb.sh  ssh_login_kill_gdb.sh  ssh_login_update_lib.sh  var.sh
